--- a/hugo.toml
+++ b/hugo.toml
@@ -4,7 +4,7 @@ defaultContentLanguageInSubdir = false
 theme = 're-terminal'
 
 [params]
-themeColor = 'green'
+themeColor = 'paper'
 centerTheme = true
 
 owner = 'trviph'
