--- a/hugo.toml
+++ b/hugo.toml
@@ -50,13 +50,20 @@ logoHomeLink = '/'
 
 [languages.vi.menu]
 [[languages.vi.menu.main]]
-identifier = "about"
-name = "Thông Tin"
-url = "/about"
-[[languages.vi.menu.main]]
 identifier = "posts"
 name = "Bài Đăng"
 url = "/posts"
+weight = 0
+[[languages.vi.menu.main]]
+identifier = "about"
+name = "Thông Tin"
+url = "/about"
+weight = 1
+[[languages.vi.menu.main]]
+identifier = "links"
+name = "Links"
+url = "/links"
+weight = 10
 
 
 [languages.en]
@@ -88,10 +95,17 @@ logoHomeLink = '/en'
 
 [languages.en.menu]
 [[languages.en.menu.main]]
-identifier = "about"
-name = "About"
-url = "/en/about"
-[[languages.en.menu.main]]
 identifier = "posts"
 name = "Posts"
 url = "/en/posts"
+weight = 0
+[[languages.en.menu.main]]
+identifier = "about"
+name = "About"
+url = "/en/about"
+weight = 1
+[[languages.en.menu.main]]
+identifier = "links"
+name = "Links"
+url = "/links"
+weight = 10
