try enable comment

--- a/hugo.toml
+++ b/hugo.toml
@@ -3,6 +3,9 @@ defaultContentLanguage = 'en'
 defaultContentLanguageInSubdir = true
 theme = 're-terminal'
 
+[services.disqus]
+shortname = 'sssplop'
+
 [params]
 themeColor = 'paper'
 centerTheme = true
